# ChangeLog for app-forensics/pyflag
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-forensics/pyflag/ChangeLog,v 1.6 2006/11/23 15:33:03 vivo Exp $

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> pyflag-0.80.1.ebuild,
  pyflag-0.82.ebuild:
  dev-db/mysql => virtual/mysql

*pyflag-0.82 (28 Jun 2006)

  28 Jun 2006; Daniel Black <dragonheart@gentoo.org>
  +files/pyflag-0.82-nodbtool.patch, +pyflag-0.82.ebuild:
  version bump

  15 Feb 2006; Markus Ullmann <jokey@gentoo.org> pyflag-0.80.1.ebuild:
  Removing virtual/libpcap wrt bug #117898

*pyflag-0.80.1 (08 Feb 2006)

  08 Feb 2006; Daniel Black <dragonheart@gentoo.org>
  +files/pyflag-0.80.1-nodbtool.patch, -files/pyflag-0.80-nodbtool.patch,
  -pyflag-0.80.ebuild, +pyflag-0.80.1.ebuild:
  version bump

  04 Feb 2006; Daniel Black <dragonheart@gentoo.org> pyflag-0.80.ebuild:
  autoconf abbreviations - thanks Diego

*pyflag-0.80 (22 Jan 2006)

  22 Jan 2006; Daniel Black <dragonheart@gentoo.org>
  +files/pyflag-0.80-nodbtool.patch, +metadata.xml, +pyflag-0.80.ebuild:
  initial import as per bug #73301
